--- a/index4.html
+++ b/index4.html
@@ -36,7 +36,7 @@
     <h3>
       Created and Designed By: Estee Sia Yin Tse<br>
       Last Updated: 9th October 2024<br>
-      Dataset Author: o Department of Statistics Malaysia (DOSM)<br>
+      Dataset Author: Department of Statistics Malaysia (DOSM)<br>
       Data Source: <a href="https://open.dosm.gov.my/data-catalogue/deaths_maternal_state?state=selangor&visual=table" target="_blank">https://data.gov.my/data-catalogue/arrivals_soe</a>
     </h3>
   </div>
@@ -53,7 +53,7 @@
   }).catch(console.error);
 
   var specTreemap = "js3/treemap.json";
-  vegaEmbed('#bump_chart', specTreemap).then(function(result) {
+  vegaEmbed('#treemap', specTreemap).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
   
