--- a/index4.html
+++ b/index4.html
@@ -33,10 +33,22 @@
       <div id="areachart"></div> 
     </div>
 
+    <!-- Line chart with description -->
+    <div class="chart">
+      <div id="scatterplot"></div>
+      <!-- Description below the line chart -->
+      <div class="description">
+        <p><strong>Monthly Foreign Arrivals Trend (2020-2024):</strong></p>
+        <p>This chart illustrates the trends in foreign arrivals to Malaysia between January 2020 and June 2024. 
+          The impact of global events, such as the COVID-19 pandemic and subsequent recovery periods, can be observed. 
+          A sharp decline in arrivals is evident in 2020, followed by gradual recovery in subsequent years as international travel restrictions eased.</p>
+      </div>
+    </div>
+
     <h3>
       Created and Designed By: Estee Sia Yin Tse<br>
       Last Updated: 9th October 2024<br>
-      Dataset Author: Department of Statistics Malaysia (DOSM)<br>
+      Dataset Author: o Department of Statistics Malaysia (DOSM)<br>
       Data Source: <a href="https://open.dosm.gov.my/data-catalogue/deaths_maternal_state?state=selangor&visual=table" target="_blank">https://data.gov.my/data-catalogue/arrivals_soe</a>
     </h3>
   </div>
