--- a/index4.html
+++ b/index4.html
@@ -26,6 +26,10 @@
         </div>
         </div>
       </div>
+    <div class="container">
+    <div class="full-width-chart">
+        <div id="map"></div>
+    </div>
 
     <div class="card">
       <h2 class="text-center">Relationship between Maternal Deaths and Maternal Mortality Rate</h2>
