--- a/index4.html
+++ b/index4.html
@@ -27,9 +27,9 @@
         </div>
       </div>
     <div class="container">
-    <div class="full-width-chart">
-        <div id="map"></div>
-    </div>
+      <div class="full-width-chart">
+          <div id="map"></div>
+      </div>
 
     <div class="card">
       <h2 class="text-center">Relationship between Maternal Deaths and Maternal Mortality Rate</h2>
@@ -81,12 +81,12 @@
     <div class="card">
       <h2 class="text-center">Maternal Mortality Rate and Deaths over Time</h2>
       <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
-        <div style="flex: 4;">
-          <div id="areachart" style="width: 100%; height: auto; padding-left: 20px;"></div>
+        <div style="flex: 5;">
+          <div id="areachart" style="width: 100%; height: auto; padding-left: 13px;"></div>
           <div style="display: flex; align-items: center; padding-bottom: 15px;"></div>
         </div>
-        <div style="flex: 3; padding-left: 50px; padding-right: 20px; text-align: justify;">
-          <p style="margin-right: 13px;">
+        <div style="flex: 4; padding-left: 15px; text-align: justify;">
+          <p style="margin-top: 80px; margin-right: 13px;">
             <span class="singapore_text">Johor</span> a peak in  
             <span class="bold_text">2021</span> in both the number of maternal deaths and mortality rate,  
             likely driven by the COVID-19 pandemic, which strained healthcare resource.   
