--- a/index4.html
+++ b/index4.html
@@ -18,10 +18,13 @@
         <h3>January 2000 to January 2022</h3>
     </div>
 
-    <div class="container">
+    <div class="card">
       <h2 class="text-center">Maternal Mortality in Malaysia by Year</h2>
-      <div class="full-width-chart">
-          <div id="map"></div>
+      <div class="card-body flex-container">
+        <div style="flex: 6;">
+          <div id="map" style="width: 100%; height: auto; margin: auto;"></div>
+        </div>
+        </div>
       </div>
 
     <div class="card">
@@ -51,7 +54,7 @@
     <div class="card">
       <h2 class="text-center">Maternal Mortality Rate by State over Time</h2>
       <div class="card-body flex-container">
-        <div style="flex: 3; padding-left: 50px; padding-right: 50px; text-align: justify; margin-top: 20px;">
+        <div style="flex: 5; padding-left: 50px; padding-right: 50px; text-align: justify; margin-top: 20px;">
           <p style="margin-top: 70px; margin-right: 16px;">
             In  
             <span class="bold_text">2021</span>, 
@@ -73,9 +76,9 @@
 
     <div class="card">
       <h2 class="text-center">Maternal Mortality Rate and Deaths over Time</h2>
-      <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
+      <div class="card-body flex-container">
         <div style="flex: 5;">
-          <div id="areachart" style="width: 100%; height: auto; padding-left: 13px;"></div>
+          <div id="areachart" style="width: 100%; height: auto; margin: auto; margin-right: 13px;"></div>
           <div style="display: flex; align-items: center; padding-bottom: 15px;"></div>
         </div>
         <div style="flex: 4; padding-left: 15px; text-align: justify;">
