--- a/index4.html
+++ b/index4.html
@@ -77,11 +77,11 @@
     <div class="card">
       <h2 class="text-center">Maternal Mortality Rate and Deaths over Time</h2>
       <div class="card-body flex-container">
-        <div style="flex: 5;">
+        <div style="flex: 7; position: relative;">
           <div id="areachart" style="width: 100%; height: auto; margin: auto; margin-right: 13px;"></div>
           <div style="display: flex; align-items: center; padding-bottom: 15px;"></div>
         </div>
-        <div style="flex: 4; padding-left: 15px; text-align: justify;">
+        <div style="flex: 3; padding-left: 15px; display: flex; flex-direction: column; justify-content: center;">
           <p style="margin-top: 80px; margin-right: 13px;">
             <span class="singapore_text">Johor</span> a peak in  
             <span class="bold_text">2021</span> in both the number of maternal deaths and mortality rate,  
