--- a/index4.html
+++ b/index4.html
@@ -77,20 +77,19 @@
     <div class="card">
       <h2 class="text-center">Maternal Mortality Rate and Deaths over Time</h2>
       <div class="card-body flex-container">
-        <div style="flex: 7; position: relative;">
-          <div id="areachart" style="width: 100%; height: auto; margin: auto; margin-right: 13px;"></div>
-          <div style="display: flex; align-items: center; padding-bottom: 15px;"></div>
-        </div>
-        <div style="flex: 3; padding-left: 15px; display: flex; flex-direction: column; justify-content: center;">
-          <p style="margin-top: 80px; margin-right: 13px;">
+        <div style="flex: 3; padding-left: 50px; padding-right: 50px; text-align: justify;">
+          <p style="margin-top: 70px; margin-right: 20px;">
             <span class="singapore_text">Johor</span> a peak in  
             <span class="bold_text">2021</span> in both the number of maternal deaths and mortality rate,  
             likely driven by the COVID-19 pandemic, which strained healthcare resource.   
-            This chart allows for an in-depth view of changes over time, revealing how the pandemic and other factors have influenced maternal mortality. 
+            This chart allows for an in-depth view of changes over time, revealing how the pandemic and other factors have influenced maternal mortality.          
           </p>
         </div>
+        <div style="flex: 3;">
+          <div id="areachart" style="width: 100%; height: auto; margin: auto; padding-right: 20px;"></div>
+          <div style="display: flex; align-items: center; padding-right: 50px; padding-bottom: 15px;"></div>
+        </div>
       </div>
-    </div>
 
     <h4>
       Created and Designed By: Estee Sia Yin Tse<br>
