--- a/index4.html
+++ b/index4.html
@@ -78,7 +78,7 @@
       <h2 class="text-center">Maternal Mortality Rate and Deaths over Time</h2>
       <div class="card-body flex-container">
         <div style="flex: 5;">
-          <div id="treemap" style="width: 100%; height: auto; margin: auto; margin-right: 13px;"></div>
+          <div id="areachart" style="width: 100%; height: auto; margin: auto; margin-right: 13px;"></div>
           <div style="display: flex; align-items: center; padding-bottom: 15px;"></div>
         </div>
         <div style="flex: 4; padding-left: 15px; text-align: justify;">
