--- a/index4.html
+++ b/index4.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="card">
-        <h1>Annual Maternal Deaths by State in <span class="malaysia_text" style="font-size:45px;">Malaysia</span></h1>
+        <h1>Annual <span class="malaysia_text" style="font-size:45px;">Maternal Deaths</span> by State in Malaysia</h1>
         <h3>January 2000 to January 2022</h3>
     </div>
 
