--- a/index4.html
+++ b/index4.html
@@ -83,7 +83,7 @@
         </div>
         <div style="flex: 4; padding-left: 15px; text-align: justify;">
           <p style="margin-top: 80px; margin-right: 13px;">
-            <span class="singapore_text">Johor</span> a peak in  
+            <span class="singapore_text">Johor</span> saw a peak in  
             <span class="bold_text">2021</span> in both the number of maternal deaths and mortality rate,  
             likely driven by the COVID-19 pandemic, which strained healthcare resource.   
             This chart allows for an in-depth view of changes over time, revealing how the pandemic and other factors have influenced maternal mortality. 
